...
        'Push notifications work on $platform!',
        NotificationDetails(
          iOS: darwinDetails,
          macOS: darwinDetails,
          android: AndroidNotificationDetails(
            AppConfig.pushNotificationsChannelId,
            'Test',
            importance: Importance.high,
            priority: Priority.max,
          ),
        ),
      );

...
