...
  },
  "appLock": "Блокировка приложения",
  "@appLock": {
    "type": "String",
    "placeholders": {}
  },
  "archive": "Архив",
  "@archive": {
    "type": "String",
    "placeholders": {}
  },
  "areGuestsAllowedToJoin": "Разрешено ли гостям присоединяться",
  "@areGuestsAllowedToJoin": {
...
  },
  "editBlockedServers": "Редактировать заблокированные серверы",
  "@editBlockedServers": {
    "type": "String",
    "placeholders": {}
  },
  "editDisplayname": "Отображаемое имя",
  "@editDisplayname": {
    "type": "String",
    "placeholders": {}
  },
  "editRoomAliases": "Псевдонимы чата",
  "@editRoomAliases": {
...
  },
  "offline": "Не в сети",
  "@offline": {
    "type": "String",
    "placeholders": {}
  },
  "ok": "Ок",
  "@ok": {
    "type": "String",
    "placeholders": {}
  },
  "online": "В сети",
  "@online": {
...
  },
  "setStatus": "Задать статус",
  "@setStatus": {
    "type": "String",
    "placeholders": {}
  },
  "settings": "Настройки",
  "@settings": {
    "type": "String",
    "placeholders": {}
  },
  "share": "Поделиться",
  "@share": {
...
  "removeFromBundle": "Удалить из этого пакета",
  "@removeFromBundle": {},
  "addToBundle": "Добавить в пакет",
  "@addToBundle": {},
  "editBundlesForAccount": "Изменить наборы для этого аккаунта",
  "@editBundlesForAccount": {},
  "addAccount": "Добавить аккаунт",
  "@addAccount": {},
  "link": "Ссылка",
  "@link": {},
  "accountAlreadyAdded": "Этот аккаунт уже добавлен",
  "@accountAlreadyAdded": {},
  "oneClientLoggedOut": "Один из ваших клиентов вышел",
  "@oneClientLoggedOut": {},
  "yourChatBackupHasBeenSetUp": "Резервное копирование чата настроено.",
  "@yourChatBackupHasBeenSetUp": {},
  "unverified": "Не проверено",
...
      },
      "botName": {
        "type": "String"
      }
    }
  },
  "miniAppCatalogTitle": "Приложения",
  "@miniAppCatalogTitle": {},
  "miniAppCatalogOpenChatToLaunch": "Откройте любой чат, чтобы запустить приложение",
  "@miniAppCatalogOpenChatToLaunch": {},
  "miniAppCatalogOpenChatToCabinet": "Откройте любой чат, чтобы открыть кабинет",
  "@miniAppCatalogOpenChatToCabinet": {},
  "miniAppCatalogFirstParty": "Продамус",
...
