...
                                          },
                                    icon: const Icon(
                                      Icons.dns_outlined,
                                      size: 18,
                                    ),
                                    label: const Text(
                                      'Локальный сервер (пароль)',
                                    ),
                                  ),
                                ],
                              ],
                            ),
                          ),
...
